--- a/style.css
+++ b/style.css
@@ -4,5 +4,20 @@
   background: #1a4dbc;
   color: white;
   font-size: 30px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.number-buttons-container {
+  background-color: #aa767c;
+  padding: 20px;
+  max-width: 50vw;
+  margin-left: 25vw;
+  margin-top: 2vh;
+  border-radius: 20px;
+}
+.number-buttons {
+  background-color: #d6a184;
+  width: 15vw;
+  height: 15vh;
+  border-radius: 10px;
 }
