--- a/style.css
+++ b/style.css
@@ -7,17 +7,39 @@
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-.number-buttons-container {
+.content {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.calculator-container {
+  display: flex;
+  flex-direction: column;
   background-color: #aa767c;
-  padding: 20px;
-  max-width: 50vw;
-  margin-left: 25vw;
-  margin-top: 2vh;
-  border-radius: 20px;
+  width: 50vw;
+  height: 70vh;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.screen {
+  display: flex;
+  background-color: darkslategrey;
+  border-radius: 10px;
+  margin: 30px;
+  padding: 20px 20px 50px 20px;
+  width: 80%;
+}
+.all-buttons-containers {
+  display: flex;
+}
+
+.number-buttons-container {
+  
+  display: flex;
 }
 .number-buttons {
   background-color: #d6a184;
-  width: 15vw;
-  height: 15vh;
   border-radius: 10px;
 }
