--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  /* border: 1px solid red; */
+}
+
 .header {
   padding: 60px;
   text-align: center;
@@ -5,6 +9,10 @@
   color: white;
   font-size: 30px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+body {
+  background-color: black;
 }
 
 .content {
@@ -16,8 +24,8 @@
 .calculator-container {
   display: flex;
   flex-direction: column;
-  background-color: #aa767c;
-  width: 50vw;
+  background-color: gray;
+  width: 50vh;
   height: 70vh;
   align-items: center;
   border-radius: 10px;
@@ -25,21 +33,64 @@
 
 .screen {
   display: flex;
-  background-color: darkslategrey;
+  background-color: whitesmoke;
   border-radius: 10px;
   margin: 30px;
   padding: 20px 20px 50px 20px;
   width: 80%;
 }
-.all-buttons-containers {
+.all-buttons-container {
   display: flex;
+  width: 100%;
+  height: 60%;
+}
+
+.number-buttons-container, .operator-buttons-container {
+  flex-wrap: wrap;
+  column-gap: 5px;
+  justify-content: center;
+  text-align: center;
 }
 
 .number-buttons-container {
+  /* float: left; */
   
-  display: flex;
 }
-.number-buttons {
-  background-color: #d6a184;
+
+
+.operator-buttons-container {
+  /* float: right;  */
+  margin-right: 15px;
+
+}
+
+
+.number-buttons, .operator-buttons {
   border-radius: 10px;
+  height: 20%;
+  aspect-ratio: 1 / 1;
+  cursor: pointer;
+}
+
+.number-buttons:hover, .operator-buttons:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.number-buttons {
+  /* background-color: #d6a184;
+  border-radius: 10px;
+  height: 100%;
+  aspect-ratio: 1 / 1; */
+  background-color: white;
+ 
+}
+
+
+.operator-buttons {
+  /* background-color: #99654a;
+  border-radius: 10px;
+  height: 100%;
+  aspect-ratio: 1 / 1;
+   */
+   background-color: orange;
 }
